--- a/composite_project-1/Composite_Project-1_fin.ipynb
+++ b/composite_project-1/Composite_Project-1_fin.ipynb
@@ -430,6 +430,11 @@
     "        _loc = 'ya'\n",
     "    # Raise error if file not found in any location\n",
     "    else:\n",
+    "        if logfile != None:\n",
+    "            # Restore the standard output stream\n",
+    "            sys.stdout = _stdout_orig\n",
+    "            # Don't forget to close the file after finishing the work\n",
+    "            _log_file.close()\n",
     "        raise RuntimeError('Something went wrong while finding the file.')\n",
     "\n",
     "    # Get filename based on location\n",
@@ -447,6 +452,11 @@
     "                _dialect = sniff(_csvfile.read(1024))\n",
     "                print(f'Most likely delimiter in the file: \\'{_dialect.delimiter}\\'')\n",
     "        except Exception:\n",
+    "            if logfile != None:\n",
+    "                # Restore the standard output stream\n",
+    "                sys.stdout = _stdout_orig\n",
+    "                # Don't forget to close the file after finishing the work\n",
+    "                _log_file.close()\n",
     "            raise RuntimeError('Something went wrong while opening the local|practicum file for delimiter analysis')\n",
     "    else:\n",
     "        try:\n",
@@ -462,6 +472,11 @@
     "            _dialect = sniff(_csvfile.read(1024))\n",
     "            print(f'Most likely delimiter in the file: \\'{_dialect.delimiter}\\'')\n",
     "        except Exception:\n",
+    "            if logfile != None:\n",
+    "                # Restore the standard output stream\n",
+    "                sys.stdout = _stdout_orig\n",
+    "                # Don't forget to close the file after finishing the work\n",
+    "                _log_file.close()\n",
     "            raise RuntimeError('Something went wrong while opening the url file for delimiter analysis')\n",
     "\n",
     "    # Read the first (for example) line of the file\n",
@@ -491,6 +506,11 @@
     "                          dtype=None)\n",
     "        print(f'CSV Data loaded into pandas DataFrame from \\'{_loc}\\'')\n",
     "    except Exception:\n",
+    "        if logfile != None:\n",
+    "            # Restore the standard output stream\n",
+    "            sys.stdout = _stdout_orig\n",
+    "            # Don't forget to close the file after finishing the work\n",
+    "            _log_file.close()\n",
     "        raise RuntimeError('Something went wrong while opening the file as a CSV')\n",
     "\n",
     "    # The total size of the DataFrame in kbytes\n",
@@ -567,7 +587,7 @@
      "output_type": "stream",
      "text": [
       "File exists locally\n",
-      "Absolute file name: 'C:\\... ...\\games.csv'\n",
+      "Absolute file name: 'C:\\...\\games.csv'\n",
       "Most likely delimiter in the file: ','\n",
       "The first line of the file:\n",
       "Name,Platform,Year_of_Release,Genre,NA_sales,EU_sales,JP_sales,Other_sales,Critic_Score,User_Score,Rating\n",
@@ -586,9 +606,8 @@
     }
    ],
    "source": [
-    "with open('my_read_csv.log', 'r') as log_file:\n",
-    "    log_content = log_file.read()\n",
-    "print(log_content)"
+    "with open('my_read_csv.log', 'r') as logfile:\n",
+    "    print(logfile.read())"
    ]
   },
   {
@@ -1124,143 +1143,143 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "#T_6ef29_row0_col0,#T_6ef29_row1_col1,#T_6ef29_row2_col2,#T_6ef29_row3_col3,#T_6ef29_row4_col4,#T_6ef29_row5_col5{\n",
+       "#T_32a9c_row0_col0,#T_32a9c_row1_col1,#T_32a9c_row2_col2,#T_32a9c_row3_col3,#T_32a9c_row4_col4,#T_32a9c_row5_col5{\n",
        "            background-color:  #08306b;\n",
        "            color:  #f1f1f1;\n",
-       "        }#T_6ef29_row0_col1,#T_6ef29_row0_col2,#T_6ef29_row0_col3,#T_6ef29_row0_col4,#T_6ef29_row0_col5,#T_6ef29_row3_col0{\n",
+       "        }#T_32a9c_row0_col1,#T_32a9c_row0_col2,#T_32a9c_row0_col3,#T_32a9c_row0_col4,#T_32a9c_row0_col5,#T_32a9c_row3_col0{\n",
        "            background-color:  #f7fbff;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row1_col0{\n",
+       "        }#T_32a9c_row1_col0{\n",
        "            background-color:  #eaf3fb;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row1_col2{\n",
+       "        }#T_32a9c_row1_col2{\n",
        "            background-color:  #1e6db2;\n",
        "            color:  #f1f1f1;\n",
-       "        }#T_6ef29_row1_col3{\n",
+       "        }#T_32a9c_row1_col3{\n",
        "            background-color:  #61a7d2;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row1_col4{\n",
+       "        }#T_32a9c_row1_col4{\n",
        "            background-color:  #4292c6;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row1_col5{\n",
+       "        }#T_32a9c_row1_col5{\n",
        "            background-color:  #caddf0;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row2_col0{\n",
+       "        }#T_32a9c_row2_col0{\n",
        "            background-color:  #dae8f6;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row2_col1{\n",
+       "        }#T_32a9c_row2_col1{\n",
        "            background-color:  #1967ad;\n",
        "            color:  #f1f1f1;\n",
-       "        }#T_6ef29_row2_col3{\n",
+       "        }#T_32a9c_row2_col3{\n",
        "            background-color:  #65aad4;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row2_col4{\n",
+       "        }#T_32a9c_row2_col4{\n",
        "            background-color:  #2b7bba;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row2_col5{\n",
+       "        }#T_32a9c_row2_col5{\n",
        "            background-color:  #cde0f1;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row3_col1{\n",
+       "        }#T_32a9c_row3_col1{\n",
        "            background-color:  #6caed6;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row3_col2{\n",
+       "        }#T_32a9c_row3_col2{\n",
        "            background-color:  #87bddc;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row3_col4{\n",
+       "        }#T_32a9c_row3_col4{\n",
        "            background-color:  #c2d9ee;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row3_col5{\n",
+       "        }#T_32a9c_row3_col5{\n",
        "            background-color:  #dbe9f6;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row4_col0{\n",
+       "        }#T_32a9c_row4_col0{\n",
        "            background-color:  #d4e4f4;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row4_col1{\n",
+       "        }#T_32a9c_row4_col1{\n",
        "            background-color:  #3686c0;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row4_col2{\n",
+       "        }#T_32a9c_row4_col2{\n",
        "            background-color:  #2979b9;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row4_col3{\n",
+       "        }#T_32a9c_row4_col3{\n",
        "            background-color:  #97c6df;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row4_col5{\n",
+       "        }#T_32a9c_row4_col5{\n",
        "            background-color:  #d2e3f3;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row5_col0{\n",
+       "        }#T_32a9c_row5_col0{\n",
        "            background-color:  #d9e7f5;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row5_col1{\n",
+       "        }#T_32a9c_row5_col1{\n",
        "            background-color:  #b4d3e9;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row5_col2{\n",
+       "        }#T_32a9c_row5_col2{\n",
        "            background-color:  #cddff1;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row5_col3{\n",
+       "        }#T_32a9c_row5_col3{\n",
        "            background-color:  #bed8ec;\n",
        "            color:  #000000;\n",
-       "        }#T_6ef29_row5_col4{\n",
+       "        }#T_32a9c_row5_col4{\n",
        "            background-color:  #d6e6f4;\n",
        "            color:  #000000;\n",
-       "        }</style><table id=\"T_6ef29_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Year_of_Release</th>        <th class=\"col_heading level0 col1\" >NA_sales</th>        <th class=\"col_heading level0 col2\" >EU_sales</th>        <th class=\"col_heading level0 col3\" >JP_sales</th>        <th class=\"col_heading level0 col4\" >Other_sales</th>        <th class=\"col_heading level0 col5\" >Critic_Score</th>    </tr></thead><tbody>\n",
+       "        }</style><table id=\"T_32a9c_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Year_of_Release</th>        <th class=\"col_heading level0 col1\" >NA_sales</th>        <th class=\"col_heading level0 col2\" >EU_sales</th>        <th class=\"col_heading level0 col3\" >JP_sales</th>        <th class=\"col_heading level0 col4\" >Other_sales</th>        <th class=\"col_heading level0 col5\" >Critic_Score</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_6ef29_level0_row0\" class=\"row_heading level0 row0\" >Year_of_Release</th>\n",
-       "                        <td id=\"T_6ef29_row0_col0\" class=\"data row0 col0\" >1.00</td>\n",
-       "                        <td id=\"T_6ef29_row0_col1\" class=\"data row0 col1\" >-0.09</td>\n",
-       "                        <td id=\"T_6ef29_row0_col2\" class=\"data row0 col2\" >0.00</td>\n",
-       "                        <td id=\"T_6ef29_row0_col3\" class=\"data row0 col3\" >-0.17</td>\n",
-       "                        <td id=\"T_6ef29_row0_col4\" class=\"data row0 col4\" >0.04</td>\n",
-       "                        <td id=\"T_6ef29_row0_col5\" class=\"data row0 col5\" >0.01</td>\n",
+       "                        <th id=\"T_32a9c_level0_row0\" class=\"row_heading level0 row0\" >Year_of_Release</th>\n",
+       "                        <td id=\"T_32a9c_row0_col0\" class=\"data row0 col0\" >1.00</td>\n",
+       "                        <td id=\"T_32a9c_row0_col1\" class=\"data row0 col1\" >-0.09</td>\n",
+       "                        <td id=\"T_32a9c_row0_col2\" class=\"data row0 col2\" >0.00</td>\n",
+       "                        <td id=\"T_32a9c_row0_col3\" class=\"data row0 col3\" >-0.17</td>\n",
+       "                        <td id=\"T_32a9c_row0_col4\" class=\"data row0 col4\" >0.04</td>\n",
+       "                        <td id=\"T_32a9c_row0_col5\" class=\"data row0 col5\" >0.01</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_6ef29_level0_row1\" class=\"row_heading level0 row1\" >NA_sales</th>\n",
-       "                        <td id=\"T_6ef29_row1_col0\" class=\"data row1 col0\" >-0.09</td>\n",
-       "                        <td id=\"T_6ef29_row1_col1\" class=\"data row1 col1\" >1.00</td>\n",
-       "                        <td id=\"T_6ef29_row1_col2\" class=\"data row1 col2\" >0.77</td>\n",
-       "                        <td id=\"T_6ef29_row1_col3\" class=\"data row1 col3\" >0.45</td>\n",
-       "                        <td id=\"T_6ef29_row1_col4\" class=\"data row1 col4\" >0.64</td>\n",
-       "                        <td id=\"T_6ef29_row1_col5\" class=\"data row1 col5\" >0.24</td>\n",
+       "                        <th id=\"T_32a9c_level0_row1\" class=\"row_heading level0 row1\" >NA_sales</th>\n",
+       "                        <td id=\"T_32a9c_row1_col0\" class=\"data row1 col0\" >-0.09</td>\n",
+       "                        <td id=\"T_32a9c_row1_col1\" class=\"data row1 col1\" >1.00</td>\n",
+       "                        <td id=\"T_32a9c_row1_col2\" class=\"data row1 col2\" >0.77</td>\n",
+       "                        <td id=\"T_32a9c_row1_col3\" class=\"data row1 col3\" >0.45</td>\n",
+       "                        <td id=\"T_32a9c_row1_col4\" class=\"data row1 col4\" >0.64</td>\n",
+       "                        <td id=\"T_32a9c_row1_col5\" class=\"data row1 col5\" >0.24</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_6ef29_level0_row2\" class=\"row_heading level0 row2\" >EU_sales</th>\n",
-       "                        <td id=\"T_6ef29_row2_col0\" class=\"data row2 col0\" >0.00</td>\n",
-       "                        <td id=\"T_6ef29_row2_col1\" class=\"data row2 col1\" >0.77</td>\n",
-       "                        <td id=\"T_6ef29_row2_col2\" class=\"data row2 col2\" >1.00</td>\n",
-       "                        <td id=\"T_6ef29_row2_col3\" class=\"data row2 col3\" >0.44</td>\n",
-       "                        <td id=\"T_6ef29_row2_col4\" class=\"data row2 col4\" >0.72</td>\n",
-       "                        <td id=\"T_6ef29_row2_col5\" class=\"data row2 col5\" >0.22</td>\n",
+       "                        <th id=\"T_32a9c_level0_row2\" class=\"row_heading level0 row2\" >EU_sales</th>\n",
+       "                        <td id=\"T_32a9c_row2_col0\" class=\"data row2 col0\" >0.00</td>\n",
+       "                        <td id=\"T_32a9c_row2_col1\" class=\"data row2 col1\" >0.77</td>\n",
+       "                        <td id=\"T_32a9c_row2_col2\" class=\"data row2 col2\" >1.00</td>\n",
+       "                        <td id=\"T_32a9c_row2_col3\" class=\"data row2 col3\" >0.44</td>\n",
+       "                        <td id=\"T_32a9c_row2_col4\" class=\"data row2 col4\" >0.72</td>\n",
+       "                        <td id=\"T_32a9c_row2_col5\" class=\"data row2 col5\" >0.22</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_6ef29_level0_row3\" class=\"row_heading level0 row3\" >JP_sales</th>\n",
-       "                        <td id=\"T_6ef29_row3_col0\" class=\"data row3 col0\" >-0.17</td>\n",
-       "                        <td id=\"T_6ef29_row3_col1\" class=\"data row3 col1\" >0.45</td>\n",
-       "                        <td id=\"T_6ef29_row3_col2\" class=\"data row3 col2\" >0.44</td>\n",
-       "                        <td id=\"T_6ef29_row3_col3\" class=\"data row3 col3\" >1.00</td>\n",
-       "                        <td id=\"T_6ef29_row3_col4\" class=\"data row3 col4\" >0.29</td>\n",
-       "                        <td id=\"T_6ef29_row3_col5\" class=\"data row3 col5\" >0.15</td>\n",
+       "                        <th id=\"T_32a9c_level0_row3\" class=\"row_heading level0 row3\" >JP_sales</th>\n",
+       "                        <td id=\"T_32a9c_row3_col0\" class=\"data row3 col0\" >-0.17</td>\n",
+       "                        <td id=\"T_32a9c_row3_col1\" class=\"data row3 col1\" >0.45</td>\n",
+       "                        <td id=\"T_32a9c_row3_col2\" class=\"data row3 col2\" >0.44</td>\n",
+       "                        <td id=\"T_32a9c_row3_col3\" class=\"data row3 col3\" >1.00</td>\n",
+       "                        <td id=\"T_32a9c_row3_col4\" class=\"data row3 col4\" >0.29</td>\n",
+       "                        <td id=\"T_32a9c_row3_col5\" class=\"data row3 col5\" >0.15</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_6ef29_level0_row4\" class=\"row_heading level0 row4\" >Other_sales</th>\n",
-       "                        <td id=\"T_6ef29_row4_col0\" class=\"data row4 col0\" >0.04</td>\n",
-       "                        <td id=\"T_6ef29_row4_col1\" class=\"data row4 col1\" >0.64</td>\n",
-       "                        <td id=\"T_6ef29_row4_col2\" class=\"data row4 col2\" >0.72</td>\n",
-       "                        <td id=\"T_6ef29_row4_col3\" class=\"data row4 col3\" >0.29</td>\n",
-       "                        <td id=\"T_6ef29_row4_col4\" class=\"data row4 col4\" >1.00</td>\n",
-       "                        <td id=\"T_6ef29_row4_col5\" class=\"data row4 col5\" >0.20</td>\n",
+       "                        <th id=\"T_32a9c_level0_row4\" class=\"row_heading level0 row4\" >Other_sales</th>\n",
+       "                        <td id=\"T_32a9c_row4_col0\" class=\"data row4 col0\" >0.04</td>\n",
+       "                        <td id=\"T_32a9c_row4_col1\" class=\"data row4 col1\" >0.64</td>\n",
+       "                        <td id=\"T_32a9c_row4_col2\" class=\"data row4 col2\" >0.72</td>\n",
+       "                        <td id=\"T_32a9c_row4_col3\" class=\"data row4 col3\" >0.29</td>\n",
+       "                        <td id=\"T_32a9c_row4_col4\" class=\"data row4 col4\" >1.00</td>\n",
+       "                        <td id=\"T_32a9c_row4_col5\" class=\"data row4 col5\" >0.20</td>\n",
        "            </tr>\n",
        "            <tr>\n",
-       "                        <th id=\"T_6ef29_level0_row5\" class=\"row_heading level0 row5\" >Critic_Score</th>\n",
-       "                        <td id=\"T_6ef29_row5_col0\" class=\"data row5 col0\" >0.01</td>\n",
-       "                        <td id=\"T_6ef29_row5_col1\" class=\"data row5 col1\" >0.24</td>\n",
-       "                        <td id=\"T_6ef29_row5_col2\" class=\"data row5 col2\" >0.22</td>\n",
-       "                        <td id=\"T_6ef29_row5_col3\" class=\"data row5 col3\" >0.15</td>\n",
-       "                        <td id=\"T_6ef29_row5_col4\" class=\"data row5 col4\" >0.20</td>\n",
-       "                        <td id=\"T_6ef29_row5_col5\" class=\"data row5 col5\" >1.00</td>\n",
+       "                        <th id=\"T_32a9c_level0_row5\" class=\"row_heading level0 row5\" >Critic_Score</th>\n",
+       "                        <td id=\"T_32a9c_row5_col0\" class=\"data row5 col0\" >0.01</td>\n",
+       "                        <td id=\"T_32a9c_row5_col1\" class=\"data row5 col1\" >0.24</td>\n",
+       "                        <td id=\"T_32a9c_row5_col2\" class=\"data row5 col2\" >0.22</td>\n",
+       "                        <td id=\"T_32a9c_row5_col3\" class=\"data row5 col3\" >0.15</td>\n",
+       "                        <td id=\"T_32a9c_row5_col4\" class=\"data row5 col4\" >0.20</td>\n",
+       "                        <td id=\"T_32a9c_row5_col5\" class=\"data row5 col5\" >1.00</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x23fb1f04850>"
+       "<pandas.io.formats.style.Styler at 0x20292443520>"
       ]
      },
      "execution_count": 19,
